--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -399,7 +399,7 @@
     "brandJoin": "Brand Join",
     "liveNow": "Live Now",
     "satisfaction": "Satisfaction",
-    "whyChooseTkgo": "Why Choose tkgogogo.com",
+    "whyChooseTkgo": "Why Choose tkbubu.com",
     "threeSteps": "Three Simple Steps to Start",
     "efficientProcess": "Efficient process design makes collaboration simple",
     "registrationVerification": "Registration & Verification",
@@ -411,7 +411,7 @@
     "userPraise": "Overwhelming User Praise",
     "realFeedback": "Listen to our users' real feedback",
     "startJourney": "Ready to Start Your TikTok Live Streaming Sales Journey?",
-    "joinTkgo": "Join tkgogogo.com and create greater value with quality partners",
+    "joinTkgo": "Join tkbubu.com and create greater value with quality partners",
     "imInfluencer": "I'm an Influencer",
     "imBrand": "I'm a Brand",
     "loading": "Loading...",
@@ -555,7 +555,7 @@
       "analytics": "Data Analytics",
       "api": "API Interface"
     },
-    "copyright": "© 2024 tkgogogo.com. All rights reserved.",
+    "copyright": "© 2024 tkbubu.com. All rights reserved.",
     "location": "China",
     "madeWith": "Made with ❤️",
     "byTeam": "by tkgo team"
