--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -399,7 +399,7 @@
     "brandJoin": "品牌方入驻",
     "liveNow": "正在直播",
     "satisfaction": "满意度",
-    "whyChooseTkgo": "为什么选择tkgogogo.com",
+    "whyChooseTkgo": "为什么选择tkbubu.com",
     "threeSteps": "简单三步，开始合作",
     "efficientProcess": "高效的流程设计，让合作变得简单",
     "registrationVerification": "注册认证",
@@ -411,7 +411,7 @@
     "userPraise": "用户好评如潮",
     "realFeedback": "听听我们用户的真实反馈",
     "startJourney": "准备开始您的TikTok直播带货之旅？",
-    "joinTkgo": "加入tkgogogo.com，与优质合作伙伴一起创造更大价值",
+    "joinTkgo": "加入tkbubu.com，与优质合作伙伴一起创造更大价值",
     "imInfluencer": "我是达人",
     "imBrand": "我是品牌方",
     "loading": "加载中...",
@@ -555,7 +555,7 @@
       "analytics": "数据分析",
       "api": "API接口"
     },
-    "copyright": "© 2024 tkgogogo.com. 保留所有权利。",
+    "copyright": "© 2024 tkbubu.com. 保留所有权利。",
     "location": "中国",
     "madeWith": "用心制作",
     "byTeam": "by tkgo团队"
