--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -558,6 +558,6 @@
     "copyright": "© 2024 tkbubu.com. All rights reserved.",
     "location": "China",
     "madeWith": "Made with ❤️",
-    "byTeam": "by tkgo team"
+    "byTeam": "by Tkbubu team"
   }
 } 
