--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -412,7 +412,7 @@
     "realFeedback": "Listen to our users' real feedback",
     "startJourney": "Ready to Start Your TikTok Live Streaming Sales Journey?",
     "joinTkgo": "Join tkbubu.com and create greater value with quality partners",
-    "imInfluencer": "I'm an Influencer",
+    "imInfluencer": "I am a Creator",
     "imBrand": "I'm a Brand",
     "loading": "Loading...",
     "home": "Home",
